# Olympus

./: .gitignore  README.md  requirements.txt  setup.py
.github/workflows/: test_suite.yml
GASM/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  pyproject.toml  setup.py  tox.ini
GASM/assets/configs/: simulation_params.yaml
GASM/assets/urdf/: conveyor.urdf  conveyor_large.urdf  conveyor_medium.urdf  conveyor_small.urdf  sensor.urdf  sensor_fixed.urdf  sensor_large.urdf  sensor_medium.urdf  sensor_small.urdf
GASM/docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_VALIDATION_FINAL_REPORT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_REVIEW.md  FEEDBACK_LOOP_DESIGN.md  GASM_INTEGRATION.md  INSTALLATION.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  PACKAGE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  SE3_IMPLEMENTATION_SUMMARY.md  SE3_MATHEMATICS.md  SYSTEM_DIAGRAMS.md  TROUBLESHOOTING.md  URDF_System_Overview.md  WINDOWS_SETUP.md  cli_validation_report.md  spatial_agent_README.md
GASM/examples/legacy/: app.py  fastapi_endpoint.py  gasm_core.py
GASM/scripts/: build_package.py  demo_urdf_system.py  fix_imports.py  generate_assets.py  install_windows.py  run_quick_demo.py  run_simple_demo.py  setup_environment.py  validate_urdf.py
GASM/src/: __init__.py
GASM/src/api/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py
GASM/src/api/middleware/: __init__.py  auth.py  cors.py  errors.py  logging.py  rate_limit.py
GASM/src/api/tests/: __init__.py  conftest.py
GASM/src/api/v1/: __init__.py  endpoints.py  gasm_endpoints.py  spatial_endpoints.py
GASM/src/docs/: VISION_SYSTEM.md
GASM/src/examples/: vision_demo.py
GASM/src/gasm/: __init__.py  utils.py
GASM/src/spatial_agent/: IMPLEMENTATION_COMPLETE.md  PYBULLET_README.md  README.md  __init__.py  agent_loop_2d.py  agent_loop_pybullet.py  demo.py  demo_complete.py  gasm_bridge.py  metrics.py  planner.py  run_demo.py  run_spatial_agent.py  utils_se3.py  validate_metrics.py  vision.py
GASM/src/spatial_agent/docs/: COMPREHENSIVE_TEST_REPORT.md  PERFORMANCE_ANALYSIS.md  README.md
GASM/src/spatial_agent/objects/: box.urdf  conveyor_belt.urdf  cube.urdf  cylinder.urdf  robot_arm.urdf  sensor_mount.urdf  sphere.urdf
GASM/src/spatial_agent/tests/: cli_test_runner.py  cli_validation_final.py
GASM/tests/: conftest.py
GASM/tools/dev/: README.md  WEIGHT_PERSISTENCE_README.md  manage_weights.py  utils_weights.py
Morpheus/: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  setup.py
Morpheus/configs/: default_config.yaml
Morpheus/docker/: Dockerfile  docker-compose.yml  init.sql
Morpheus/docs/: ARCHITECTURE.md  COMPONENT_INTEGRATION.md  DATABASE_SCHEMA.md  DREAM_ENGINE_DESIGN.md  IMPLEMENTATION_PLAN.md  NEURAL_ARCHITECTURES.md
Morpheus/examples/: basic_material_demo.py  basic_perception_demo.py  dream_learning_demo.py  tactile_processing_demo.py
Morpheus/scripts/: setup_database.py  validate_basic.py  validate_implementation.py  validate_structure.py
Morpheus/src/morpheus/: __init__.py
Morpheus/src/morpheus/core/: __init__.py  config.py  orchestrator.py  types.py
Morpheus/src/morpheus/dream_sim/: __init__.py  dream_orchestrator.py
Morpheus/src/morpheus/examples/: __init__.py  basic_perception.py  dream_cycle_demo.py  full_integration.py  material_exploration.py
Morpheus/src/morpheus/integration/: __init__.py  gasm_bridge.py  material_bridge.py
Morpheus/src/morpheus/perception/: __init__.py  audio_spatial.py  sensory_fusion.py  tactile_processor.py
Morpheus/src/morpheus/predictive/: __init__.py  forward_model.py
Morpheus/src/morpheus/storage/: __init__.py  postgres_storage.py
Morpheus/src/morpheus/utils/: __init__.py
Morpheus/tests/: __init__.py  conftest.py  test_audio_spatial.py  test_core_integration.py  test_dream_orchestrator.py  test_forward_model.py  test_gasm_bridge.py  test_integration.py  test_sensory_fusion.py
Morpheus/tests/integration/: test_gasm_integration.py  test_integration.py  test_performance.py
Morpheus/tests/mocks/: __init__.py  mock_gasm.py  mock_pybullet.py
Morpheus/tests/unit/: test_dream_orchestrator.py  test_material_bridge.py  test_postgres_storage.py  test_tactile_processor.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ETHICS.md  INSTALLATION.md  README_SAFETY_LAYER.md  SAFETY.md  TESTING.md  consciousness_analysis_report.md
examples/: asimov_kernel_demo.py  nexus_integration_demo.py
scripts/: run_tests.py
src/olympus/core/: __init__.py  config_manager.py  consciousness_kernel.py  identity_manager.py  module_manager.py  olympus_orchestrator.py  system_health.py
src/olympus/ethical_core/: __init__.py  asimov_kernel.py  ethical_validator.py  integrity_monitor.py
src/olympus/examples/: safety_layer_demo.py
src/olympus/modules/atlas/: __init__.py  domain_adaptation.py  few_shot_learner.py  knowledge_transfer.py  meta_learning.py  sim2real_bridge.py  skill_library.py  task_encoder.py  transfer_validator.py
src/olympus/modules/nexus/: __init__.py  collective_memory.py  communication_protocol.py  consensus_engine.py  distributed_learning.py  hive_mind.py  knowledge_sharing.py  swarm_coordinator.py  swarm_ethics.py
src/olympus/modules/prometheus/: __init__.py  component_manager.py  degradation_model.py  diagnostic_engine.py  (+5 more)
src/olympus/safety_layer/: __init__.py  action_filter.py  audit_logger.py  fail_safe.py  human_protection.py  intention_analyzer.py  risk_assessment.py
tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  pytest.ini  requirements-test.txt  test_asimov_kernel.py  test_prometheus_integration.py
tests/integration/: test_system_integration.py
tests/performance/: test_load_testing.py
tests/safety_layer/: test_action_filter.py  test_human_protection.py  test_integration.py
tests/stress/: test_failure_injection.py
tests/unit/core/: test_olympus_orchestrator.py
tests/unit/ethical_core/: test_asimov_kernel.py
tests/unit/safety_layer/: test_action_filter.py
(+1 files in other folders)
